--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,28 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!--MQ-->
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-activemq -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-activemq</artifactId>
+            <version>2.6.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.rinext</groupId>
+            <artifactId>pkclient</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.couchbase.client</groupId>
+            <artifactId>java-client</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.rinext</groupId>
+            <artifactId>cmc</artifactId>
+            <version>1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
