--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+# Active MQ
+spring.activemq.broker-url= tcp://localhost:61616
+spring.activemq.user=be_dcp
+spring.activemq.password=p@ssw0rd
+#not needed if own MessageConverter was configured
+spring.activemq.packages.trust-all=true
